# pcloud-async-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: events.rs  file_ops.rs  folder_ops.rs  lib.rs  low_level_file.rs  pcloud_client.rs  pcloud_model.rs  remote_zip.rs
tests/: integration_test.rs
