[package]
name = "pcloud-async-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_repr = "0.1"
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4.17"
env_logger = "0.10.0"
futures = "0.3.26"

[dev-dependencies]
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
