[package]
name = "pcloud-async-api"
version = "0.1.0"
edition = "2021"

[features]
# Currently does not work, gives errors on file descriptor
low_level_file_ops = []
# Gives access denied errors :/
remote_zip = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
futures = "0.3"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
env_logger = "0.10"
zip = "0.6.4"
bytes = { version = "1.4", features = ["std"] }
